...
        tools:context=".GroupTest.HomeActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/topbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp">
...
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="10dp"
                    android:text="Directions"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/count"
                    android:layout_width="wrap_content"
...
                    android:iconifiedByDefault="false"
                    android:text="@{`(` + vm.remainingExhibits.toString() + `)`}"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/routeSummaryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="Route Summary" />

            </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/next_button"
                android:text="MOCK LOCATION"
                android:layout_centerHorizontal="true"
                android:onClick="onMockButtonClicked"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_button"
...
